--- a/main.tex
+++ b/main.tex
@@ -19,14 +19,14 @@
 \maketitle
 \tableofcontents
 \newpage
-\input{0413/0413}
-\input{0420/0420}
-\input{0427/0427}
-\input{0511/0511}
-\input{0518/0518}
-\input{0608/0608}
-\input{0615/0615}
-\input{0622/0622}
-\input{0629/0629}
-\input{0713/0713}
+\input{sections/0413}
+\input{sections/0420}
+\input{sections/0427}
+\input{sections/0511}
+\input{sections/0518}
+\input{sections/0608}
+\input{sections/0615}
+\input{sections/0622}
+\input{sections/0629}
+\input{sections/0713}
 \end{document}
