--- a/preambles/math.tex
+++ b/preambles/math.tex
@@ -1,4 +1,4 @@
-\usepackage{mathtools, amssymb, amsthm, mathrsfs, bbm,nccmath}
+\usepackage{mathtools, amssymb, mathrsfs, bbm,nccmath}
 \usepackage{bm}
 
 
@@ -40,4 +40,7 @@
 \mathtoolsset{showonlyrefs=true}
 % 数式番号を節番号とセットにする
 \numberwithin{equation}{section}
-\usepackage{ascmac}
+\usepackage{amsthm}
+
+\renewcommand{\proofname}{（証明）}
+
